--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a class="js-scroll-trigger" href="https://trjpedia.blogspot.com">Blog Page</a>
             </li>
             <li class="sidebar-nav-item">
-                <a class="js-scroll-trigger" href="#contact">Contact</a>
+                <a class="js-scroll-trigger" href="https://twitter.com/trj_0751">Contact</a>
             </li>
             <li class="sidebar-nav-item">
                 <a class="js-scroll-trigger" href="#project">Projects</a>
