Icon added and Updated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Tarun R Jain">
 
     <title>TARUN R JAIN</title>
-    <link rel="shortcut icon " type="image/png " href="user.png" />
+    <link rel="shortcut icon " type="image/png " href="./img/icon.svg" />
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
