--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="sidebar-nav-item">
-                <a class="js-scroll-trigger" href="https://trjpedia.blogspot.com">Blog Page</a>
+                <a class="js-scroll-trigger" href="https://animevyuh.org">Blog Page</a>
             </li>
             <li class="sidebar-nav-item">
                 <a class="js-scroll-trigger" href="https://twitter.com/trj_0751">Contact</a>
@@ -77,9 +77,9 @@
                             </br>
                             I am Blogger, write articles related to Technology.
                             </br>
-                            I love writing code, I have good knowledge of Python,Java,HTML&CSS,SQL and GIT version control
+                            I do coding in my free time, I have good knowledge of Python,HTML&CSS,SQL and GIT version control
                             </br>
-                            Fun Fact: I spend my free time watching Anime and Read Manga
+                            Fun Fact: I love watching anime and reading manga
                           </strong>
                         </p>
                     </h3>
@@ -144,7 +144,7 @@
     <section class="callout">
         <div class="container text-center">
             <h2 class="mx-auto mb-5">Check out my BLOG PAGE</h2>
-            <a class="btn btn-primary btn-xl" href="https://trjpedia.blogspot.com">TRJPEDIA</a>
+            <a class="btn btn-primary btn-xl" href="https://animevyuh.org">Anime Vyuh</a>
         </div>
     </section>
 
