--- a/index.html
+++ b/index.html
@@ -169,33 +169,33 @@
                     </a>
                 </div>
                 <div class="col-lg-6">
-                    <a class="portfolio-item" href="https://github.com/lucifertrj/manga-scrap">
+                    <a class="portfolio-item" href="https://github.com/lucifertrj/Real-Time-Object-Distance-Measurement">
                         <div class="caption">
                             <div class="caption-content">
-                                <div class="h2"><strong>Manga Scrapping</strong></div>
-                                <p class="mb-0">Download Your favourite Manga Chapter</p>
+                                <div class="h2"><strong>Real Time Object Detection and Distance Measurement</strong></div>
+                                <p class="mb-0"> Find the real time distance of the object by detecting and identifing it using WebCam</p>
                             </div>
                         </div>
                         <img class="img-fluid" src="img/manga_bg.jpeg" tfol alt="">
                     </a>
                 </div>
                 <div class="col-lg-6">
-                    <a class="portfolio-item" href="https://github.com/lucifertrj/Music-Player">
+                    <a class="portfolio-item" href="https://github.com/lucifertrj/EuroSat-Satellite-CNN">
                         <div class="caption">
                             <div class="caption-content">
-                                <div class="h2"><strong>Music Player</strong></div>
-                                <p class="mb-0">Listen to the best Anime openings</p>
+                                <div class="h2"><strong>Eurosat Satellite CNN and Data Augementation</strong></div>
+                                <p class="mb-0">Performing Convolution Neural Network and Data Augementation on EuroSat Satellite dataset.</p>
                             </div>
                         </div>
                         <img class="img-fluid" src="img/music.jpeg" alt="">
                     </a>
                 </div>
                 <div class="col-lg-6">
-                    <a class="portfolio-item" href="https://github.com/lucifertrj/TODO">
+                    <a class="portfolio-item" href="https://github.com/lucifertrj/">
                         <div class="caption">
                             <div class="caption-content">
-                                <div class="h2"><strong>TODO</strong></div>
-                                <p class="mb-0">Update your tasks in the todo list</p>
+                                <div class="h2"><strong>Hyperspectral Image Compression On FPGA</strong></div>
+                                <p class="mb-0">Compressed the Hyperspectral Image bands with help Neural Networks and FPGA</p>
                             </div>
                         </div>
                         <img class="img-fluid" src="img/todo_bg.jpeg" alt="">
