--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <p class="mb-0">One local platform to satisfy multiple remote deeds</p>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/image.jpeg" alt="">
+                        <img class="img-fluid" src="img/image.jpeg" alt="data">
                     </a>
                 </div>
                 <div class="col-lg-6">
@@ -176,7 +176,7 @@
                                 <p class="mb-0"> Find the real time distance of the object by detecting and identifing it using WebCam</p>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/manga_bg.jpeg" tfol alt="">
+                        <img class="img-fluid" src="https://developers.google.com/static/ml-kit/vision/object-detection/images/object_detection2x.png" tfol alt="object_detection">
                     </a>
                 </div>
                 <div class="col-lg-6">
@@ -187,7 +187,7 @@
                                 <p class="mb-0">Performing Convolution Neural Network and Data Augementation on EuroSat Satellite dataset.</p>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/music.jpeg" alt="">
+                        <img class="img-fluid" src="http://www.nasa.gov/sites/default/files/images/415536main_r_landsat_full.jpg" alt="cnn">
                     </a>
                 </div>
                 <div class="col-lg-6">
@@ -198,7 +198,7 @@
                                 <p class="mb-0">Compressed the Hyperspectral Image bands with help Neural Networks and FPGA</p>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/todo_bg.jpeg" alt="">
+                        <img class="img-fluid" src="https://a.storyblok.com/f/123723/1080x675/bdb3dde388/sentinel2_2-1080x675-1.jpeg" alt="image_compression">
                     </a>
                 </div>
             </div>
