--- a/index.html
+++ b/index.html
@@ -24,239 +24,8 @@
 </head>
 
 <body id="page-top">
-
-    <!-- Navigation -->
-    <a class="menu-toggle rounded" href="#">
-        <i class="fas fa-bars"></i>
-    </a>
-    <nav id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li class="sidebar-brand">
-                <a class="js-scroll-trigger" href="#page-top">Tarun Jain Portfolio</a>
-            </li>
-            <li class="sidebar-nav-item">
-                <a class="js-scroll-trigger" href="#page-top">Home</a>
-            </li>
-            <li class="sidebar-nav-item">
-                <a class="js-scroll-trigger" href="#about">About</a>
-            </li>
-            <li class="sidebar-nav-item">
-                <a class="js-scroll-trigger" href="https://animevyuh.org">Blog Page</a>
-            </li>
-            <li class="sidebar-nav-item">
-                <a class="js-scroll-trigger" href="https://twitter.com/trj_0751">Contact</a>
-            </li>
-            <li class="sidebar-nav-item">
-                <a class="js-scroll-trigger" href="#project">Projects</a>
-            </li>
-
-        </ul>
-    </nav>
-
-    <!-- Header -->
-    <header class="masthead d-flex">
-        <div class="container text-center my-auto">
-            <h1 class="name" id="name">Tarun Jain Portfolio</h1>
-            <h3 class="mb-5">
-                <span class="hobby">Tech🚀 Code📝 Anime🔥</span>
-            </h3>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
-        </div>
-        <div class="overlay"></div>
-    </header>
-
-    <!-- About -->
-    <section class="content-section bg-light" id="about">
-        <div class="container text-center">
-            <div class="row">
-                <div class="col-lg-10 mx-auto">
-                    <h1>ABOUT ME</h1>
-                    <h3>
-                        <p>
-                            <strong>Hello there, I am Tarun R Jain, VLSI and Data Science Enthusiast.
-                            </br>
-                            I am Blogger, write articles related to Technology.
-                            </br>
-                            I do coding in my free time, I have good knowledge of Python,HTML&CSS,SQL and GIT version control
-                            </br>
-                            Fun Fact: I love watching anime and reading manga
-                          </strong>
-                        </p>
-                    </h3>
-                    <a class="btn btn-primary btn-xl btn-dark js-scroll-trigger" href="#skills">Skills and certification</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Services -->
-    <section class="content-section bg-primary text-white text-center" id="skills">
-        <div class="container">
-            <div class="content-section-heading">
-                <h3 class="text-secondary mb-0">SKills with Certification</h3>
-                <h2 class="mb-5">HERE ARE SOME CERTIFIED COURSE</h2>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                    <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-pencil"></i>
-          </span>
-                    <h4>
-                        <strong>Python</strong>
-                    </h4>
-                    <p class="text-faded mb-0"><strong>4/5</strong></p>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                    <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-screen-smartphone"></i>
-          </span>
-                    <h4>
-                        <strong>JAVA</strong>
-                    </h4>
-                    <p class="text-faded mb-0"><strong>3.5/5</strong></p>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                    <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-like"></i>
-          </span>
-                    <h4>
-                        <strong>GIT</strong>
-                    </h4>
-                    <p class="text-faded mb-0"><strong>4/5</strong>
-                    </p>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-mustache"></i>
-          </span>
-                    <h4>
-                        <strong>SQL</strong>
-                    </h4>
-                    <p class="text-faded mb-0">
-                        <strong>4/5</strong></p>
-                </div>
-            </div>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#project">Projects</a>
-        </div>
-    </section>
-
-    <!-- Callout -->
-    <section class="callout">
-        <div class="container text-center">
-            <h2 class="mx-auto mb-5">Check out my BLOG PAGE</h2>
-            <a class="btn btn-primary btn-xl" href="https://animevyuh.org">Anime Vyuh</a>
-        </div>
-    </section>
-
-    <!-- Portfolio -->
-    <section class="content-section" id="project">
-        <div class="container">
-            <div class="content-section-heading text-center">
-                <h3 class="text-secondary mb-0">Portfolio</h3>
-                <h2 class="mb-5">Recent Projects</h2>
-            </div>
-            <div class="row no-gutters">
-                <div class="col-lg-6">
-                    <a class="portfolio-item" href="https://github.com/lucifertrj/multi-tasker-saviour">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <div class="h2">
-                                    <strong>Multi Tasker Saviour</strong></div>
-                                <p class="mb-0">One local platform to satisfy multiple remote deeds</p>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/image.jpeg" alt="data">
-                    </a>
-                </div>
-                <div class="col-lg-6">
-                    <a class="portfolio-item" href="https://github.com/lucifertrj/Real-Time-Object-Distance-Measurement">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <div class="h2"><strong>Real Time Object Detection and Distance Measurement</strong></div>
-                                <p class="mb-0"> Find the real time distance of the object by detecting and identifing it using WebCam</p>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="https://developers.google.com/static/ml-kit/vision/object-detection/images/object_detection2x.png" tfol alt="object_detection">
-                    </a>
-                </div>
-                <div class="col-lg-6">
-                    <a class="portfolio-item" href="https://github.com/lucifertrj/EuroSat-Satellite-CNN">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <div class="h2"><strong>Eurosat Satellite CNN and Data Augementation</strong></div>
-                                <p class="mb-0">Performing Convolution Neural Network and Data Augementation on EuroSat Satellite dataset.</p>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="http://www.nasa.gov/sites/default/files/images/415536main_r_landsat_full.jpg" alt="cnn">
-                    </a>
-                </div>
-                <div class="col-lg-6">
-                    <a class="portfolio-item" href="https://github.com/lucifertrj/">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <div class="h2"><strong>Hyperspectral Image Compression On FPGA</strong></div>
-                                <p class="mb-0">Compressed the Hyperspectral Image bands with help Neural Networks and FPGA</p>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="https://a.storyblok.com/f/123723/1080x675/bdb3dde388/sentinel2_2-1080x675-1.jpeg" alt="image_compression">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer text-center">
-        <div class="container">
-            <ul class="list-inline mb-5">
-                <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/tarun._.jayyn">
-                        <i class="icon-social-instagram"></i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white mr-3" href="https://www.twitter.com/TRJ_0751">
-                        <i class="icon-social-twitter"></i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white" href="https://www.github.com/lucifertrj">
-                        <i class="icon-social-github"></i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/tarun_jain">
-                        <i class="icon-social-linkedin"></i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/tarun_jain_abd">
-                        <i class="icon-social-facebook"></i>
-                    </a>
-                </li>
-
-            </ul>
-            <p class="text-muted small mb-0">Created using Bootstrap &copy;Copyright: TARUN R JAIN All rights reserved</p>
-        </div>
-    </footer>
-
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
-        <i class="fas fa-angle-up"></i>
-    </a>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/stylish-portfolio.min.js"></script>
-
-</body>
+    <h1>New Portfolio Under Development, will be updated on 6th Sept</h1>
+  </body>
 
 </html>
 
-</html>
