about me update

--- a/index.html
+++ b/index.html
@@ -89,13 +89,12 @@
                 I am Tarun R Jain pursuing my Enginnering Degree in Electronics and Communication. 
               </p>
               <p data-aos="fade-up" data-aos-delay="90">
-               I have been coding for last 3-4 years and my area of expertise is Machine Learning and Deep Learning. I love documentating my coding journey and projects through Blog articles. 
+               I have been coding for the last 3-4 years and my area of expertise is Machine Learning and Deep Learning. I love documenting my coding journey and projects through Blog articles.               </p>
+              <p data-aos="fade-up" data-aos-delay="90">
+                Currently, I have focused on contributing to Open Source Projects. I am an active participant at <a href="https://huggingface.co/lucifertrj">Hugging Face- Keras Working Group</a>, besides I am also contributing to example projects to the Keras-team organization. 
               </p>
               <p data-aos="fade-up" data-aos-delay="90">
-                Currently I have focusing on contributing to Open Source Projects in domain of Machine Learning/Deep Learning. Have taken part in Hugging Face Keras Organization to work on DCGAN and Neural Decision Forest.Also working on Computer Vision projects to contribute to Keras-team.
-              </p>
-              <p data-aos="fade-up" data-aos-delay="90">
-                Besides acaedmics I watch Anime, read Manga and write blog articles(Tech+Entertainment). 
+               Besides academics, I watch Anime, read Manga and write blog articles(Tech+Entertainment).
                 </p>  
             </div>
           </div>
