--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <p data-aos="fade-up" data-aos-delay="90">
                I have been coding for the last 3-4 years and my area of expertise is Machine Learning and Deep Learning. I love documenting my coding journey and projects through Blog articles.               </p>
               <p data-aos="fade-up" data-aos-delay="90">
-                Currently, I have focused on contributing to Open Source Projects. I am an active participant at <a href="https://huggingface.co/lucifertrj">Hugging Face- Keras Working Group</a>, besides I am also contributing to example projects to the Keras-team organization. 
+                Currently, I am focused on contributing to Open Source Projects. I am an active participant at <a href="https://huggingface.co/lucifertrj">Hugging Face- Keras Working Group</a>, besides I am also contributing to example projects to the Keras-team organization. 
               </p>
               <p data-aos="fade-up" data-aos-delay="90">
                Besides academics, I watch Anime, read Manga and write blog articles(Tech+Entertainment).
