--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
               <a href="https://drive.google.com/drive/folders/19EyJtfC9z5ggOfIk9rRlFIlFEpwb8qil?usp=sharing" target="_blank">Resume</a>
             </li>
             <li class="get-started">
+              <a href="https://drive.google.com/drive/folders/1NKa-bodoFWFlH9b3i9cWyhG7l55t6krc?usp=sharing" target="_blank">Certifications</a>
+            </li>
+            <li class="get-started">
               <a href="https://github.com/eksauek" target="_blank">EkSauEk</a>
             </li>
           </ul>
