about me corrected

--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
               <h3 data-aos="fade-up">About Me</h3>
               <p></p>
               <p data-aos="fade-up" data-aos-delay="90">
-                I am Tarun R Jain pursuing my Enginnering Degree in Electronics and Communication. 
+                I am Tarun R Jain pursuing final year in Electronics and Communication Engineering(BE).
               </p>
               <p data-aos="fade-up" data-aos-delay="90">
-               I have been coding for the last 3-4 years and my area of expertise is Machine Learning and Deep Learning. I love documenting my coding journey and projects through Blog articles.               </p>
+                My passion is Coding with area of expertise in Machine Learning and Deep Learning. I love documenting my Coding Journey via Blog articles. I have published over 80+ articles till date. </p>
               <p data-aos="fade-up" data-aos-delay="90">
-                Currently, I am focused on contributing to Open Source Projects. I am an active participant at <a href="https://huggingface.co/lucifertrj">Hugging Face- Keras Working Group</a>, and contributing to example projects to the Keras-team organization. 
+                Currently, I am focused on contributing to Open Source Projects. I am an active participant at <a href="https://huggingface.co/lucifertrj">Hugging Face- Keras Working Group</a> and Technical Content Writer at <a href="https://medium.com/@jaintarun7">Medium</a> and <a href="https://auth.geeksforgeeks.org/user/jaintarun/articles">Geeksforgeeks</a>. 
               </p>
               <p data-aos="fade-up" data-aos-delay="90">
-               Apart from academics, I watch Anime, read Manga and write blog articles(Tech+Entertainment).
+               Apart from academics, I watch Anime and read Manga.
                 </p>  
             </div>
           </div>
