skills => events change

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <ul>
             <li class="active"><a href="#header">Home</a></li>
             <li><a href="#about">About Me</a></li>
-            <li><a href="#skills">Skills</a></li>
+            <li><a href="#events">Events</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#social">Connect</a></li>
@@ -64,8 +64,8 @@
           <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
             <h1>Its Me...</h1>
             <h1>Tarun</h1>
-            <h2>Creator of <a href="https://www.animevyuh.org">Anime Vyuh</a> and <a href="https://www.github.com/eksauek">EksauEk</a></h2>
-            <a href="https://animevyuh.org/" target="_blank" class="btn-get-started">Blog</a>          
+            <h3 class="col-mt-4">Know more about me...</h3>
+            <a href="#about" target="_blank" class="btn-get-started">Blog</a>          
             </div>
           <div class="col-lg-6 order-1 order-lg-1">
             <img
@@ -89,15 +89,15 @@
               <h3 data-aos="fade-up">About Me</h3>
               <p></p>
               <p data-aos="fade-up" data-aos-delay="90">
-                I am Tarun R Jain pursuing final year in Electronics and Communication Engineering(BE).
+                Hello! My name is Tarun R Jain, and I'm currently in my final year of Electronics and Communication Engineering (BE). I'm a passionate coder with expertise in Machine Learning, Image Processing, and Deep Learning. I've published over 80 blog articles documenting my coding journey, and I'm actively involved in various communities, including <a href="https://huggingface.co/lucifertrj">Hugging Face-Keras Working Group</a>, <a href="https://www.deeplearning.ai/events/">Deep Learning AI- Bangalore Ambassador</a>, <a href="https://www.meetup.com/tfugblr/members/?op=leaders">TensorFlow User Group Bangalore- Assistant Organizer</a> and <a href="https://auth.geeksforgeeks.org/user/jaintarun/articles">Geeksforgeeks- Technical content writer</a>.
               </p>
               <p data-aos="fade-up" data-aos-delay="90">
-                My passion is Coding with area of expertise in Machine Learning and Deep Learning. I love documenting my Coding Journey via Blog articles. I have published over 80+ articles till date. </p>
+                What I love most about coding is the ability to create something new and solve complex problems. I'm constantly learning and experimenting with new techniques to improve my skills and knowledge. In addition to my technical pursuits, I also enjoy watching anime and reading manga in my free time. </p>
               <p data-aos="fade-up" data-aos-delay="90">
-                Currently, I am focused on contributing to Open Source Projects. I am an active participant at <a href="https://huggingface.co/lucifertrj">Hugging Face- Keras Working Group</a> and Technical Content Writer at <a href="https://medium.com/@jaintarun7">Medium</a> and <a href="https://auth.geeksforgeeks.org/user/jaintarun/articles">Geeksforgeeks</a>. 
+                If you're interested in collaborating on a project or discussing a coding challenge, feel free to reach out to me.
               </p>
               <p data-aos="fade-up" data-aos-delay="90">
-               Apart from academics, I watch Anime and read Manga.
+               I'm always excited to connect with fellow coders and learn from others. Thanks for stopping by!
                 </p>  
             </div>
           </div>
@@ -106,11 +106,11 @@
       <!-- End About Section -->
 
       <!-- ======= Services Section ======= -->
-      <section id="skills" class="services section-bg">
+      <section id="events" class="services section-bg">
         <div class="container">
           <div class="section-title" data-aos="fade-up">
-            <h2>Skills- Tech Stack</h2>
-            <p>I am familiar and efficient in...</p>
+            <h2>Events/ Workshops</h2>
+            <p>Learn. Collaborate. Contribute is my motto</p>
           </div>
 
           <div class="row">
@@ -120,10 +120,9 @@
               data-aos-delay="400"
             >
               <div class="icon-box">
-                <div class="icon"><i class="fab fa-python"></i></div>
-                <h4 class="title"><a>Python</a></h4>
+                <h4 class="title"><a href="https://github.com/Anime-Vyuh/AV-Workshops/tree/main/Deep_Learning_Workshop">Deep Learning Workshop- IEEE</a></h4>
                 <p class="description">
-                     I have explored and have good knowledge of Pandas, NumPy, PyGame, Tkinter, bs4, sklearn libraries in Python. 
+                     Organized Two Days Hands-on Workshop on Deep Learning under IEEE at Cambridge Institute of Technology. 
                 </p>
               </div>
             </div>
@@ -134,10 +133,9 @@
               data-aos-delay="400"
             >
               <div class="icon-box">
-                <div class="icon"><i class="fab fa-java"></i></div>
-                <h4 class="title"><a>Java and C++</a></h4>
+                <h4 class="title"><a href="https://www.eventbrite.com/e/pie-ai-bangalore-chatgpt3-architecture-breakdown-tickets-522974369417">ChatGPT Architecture Breakdown</a></h4>
                 <p class="description">
-                  Comfortable with OOPs concept and DSA in Java and C++
+                  ChatGPT is 
                 </p>
               </div>
             </div>
@@ -150,27 +148,24 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="fab fa-js"></i></div>
-                <h4 class="title"><a>HTML, CSS and JavaScript</a></h4>
+                <h4 class="title"><a href="https://github.com/Anime-Vyuh/AV-Workshops/tree/main/Image_Processing">Image Processing Workshop</a></h4>
                 <p class="description">
-                  I can build a decent looking website using HTML, CSS and JavaScript.
+                  Organized and spoke on Hands-on Workshop on Image Processing using MATLAB. 
                 </p>
               </div>
             </div>
-
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
               data-aos-delay="300"
             >
               <div class="icon-box">
-                <div class="icon"><i class="fab fa-docker"></i></div>
-                <h4 class="title"><a>Docker</a></h4>
+                <h4 class="title"><a href="https://gdsc.community.dev/events/details/developer-student-clubs-nitte-meenakshi-institute-of-technology-bengaluru-presents-tensorflow-hands-on-session-solution-challenge/">Deep Learning Workshop- GDSC</a></h4>
                 <p class="description">
-                  I have implemented Docker Images for my project and have good understanding of Docker CLI. 
+                 I Spoke for two days on Deep Learning with TensorFlow at Nitte Meenakshi Institute of Technology.(hands-on)
                 </p>
               </div>
             </div>
-
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
@@ -178,9 +173,9 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="fab fa-tensorflow"></i></div>
-                <h4 class="title"><a>Tensorflow and Keras</a></h4>
+                <h4 class="title"><a>Recur Loop</a></h4>
                 <p class="description">
-                  Tensorflow as been a perfect guide for me to explore Deep Learning Algoritms. I am currently trying to contribute to Open Source projects at Keras-team.
+                  Recur Loop is a coding competition which I conducted as a Coding Ninjas Campus Ambassador
                 </p>
               </div>
             </div>
@@ -206,23 +201,9 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="fab fa-git-alt"></i></div>
-                <h4 class="title"><a>Git</a></h4>
+                <h4 class="title"><a href="https://www.meetup.com/tfugblr/events/291662146/">Scalability of ML Applications</a></h4>
                 <p class="description">
-                  Version Control With GIT, I am familiar with GIT CLI commands and CI/CD workflow. 
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-md-6 col-lg-3 d-flex align-items-stretch"
-              data-aos="zoom-in"
-              data-aos-delay="400"
-            >
-              <div class="icon-box">
-                <div class="icon"><i class="fab fa-MATLAB"></i></div>
-                <h4 class="title"><a>MATLAB</a></h4>
-                <p class="description">
-                  Familiar with Digital Image Processing Fundamentals
+                  The event covered various topics, including distributed computing, parallel processing, model optimization, deployment architectures, and more.
                 </p>
               </div>
             </div>
