--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
             <li class="get-started">
               <a href="https://drive.google.com/drive/folders/1NKa-bodoFWFlH9b3i9cWyhG7l55t6krc?usp=sharing" target="_blank">Certifications</a>
             </li>
-            <li class="get-started">
-              <a href="https://github.com/eksauek" target="_blank">EkSauEk</a>
-            </li>
           </ul>
         </nav>
       </div>
@@ -65,7 +62,7 @@
             <h1>Its Me...</h1>
             <h1>Tarun</h1>
             <h3 class="col-mt-4">Know more about me...</h3>
-            <a href="#about" target="_blank" class="btn-get-started">Blog</a>          
+            <a href="#about" class="btn-get-started">Get started</a>          
             </div>
           <div class="col-lg-6 order-1 order-lg-1">
             <img
@@ -119,12 +116,14 @@
               data-aos="zoom-in"
               data-aos-delay="400"
             >
+            <a href="https://github.com/Anime-Vyuh/AV-Workshops/tree/main/Deep_Learning_Workshop">
               <div class="icon-box">
-                <h4 class="title"><a href="https://github.com/Anime-Vyuh/AV-Workshops/tree/main/Deep_Learning_Workshop">Deep Learning Workshop- IEEE</a></h4>
+                <h4 class="title">Deep Learning Workshop- IEEE</h4>
                 <p class="description">
                      Organized Two Days Hands-on Workshop on Deep Learning under IEEE at Cambridge Institute of Technology. 
                 </p>
               </div>
+            </a>
             </div>
 
             <div
@@ -132,39 +131,42 @@
               data-aos="zoom-in"
               data-aos-delay="400"
             >
+            <a href="https://www.eventbrite.com/e/pie-ai-bangalore-chatgpt3-architecture-breakdown-tickets-522974369417">
               <div class="icon-box">
-                <h4 class="title"><a href="https://www.eventbrite.com/e/pie-ai-bangalore-chatgpt3-architecture-breakdown-tickets-522974369417">ChatGPT Architecture Breakdown</a></h4>
+                <h4 class="title">ChatGPT Architecture Breakdown</h4>
                 <p class="description">
-                  ChatGPT is 
+                  In this event I spoke on Reinforcement Learning with Human Feedback, InstructGPT, Transformers and PPO algorithm used to build ChatGPT. 
                 </p>
               </div>
+              </a>
             </div>
-
-
+            
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
-              data-aos-delay="100"
-            >
+              data-aos-delay="400"
+            ><a href="https://github.com/Anime-Vyuh/AV-Workshops/tree/main/Image_Processing">
               <div class="icon-box">
-                <div class="icon"><i class="fab fa-js"></i></div>
-                <h4 class="title"><a href="https://github.com/Anime-Vyuh/AV-Workshops/tree/main/Image_Processing">Image Processing Workshop</a></h4>
+                <h4 class="title">Image Processing Workshop</h4>
                 <p class="description">
-                  Organized and spoke on Hands-on Workshop on Image Processing using MATLAB. 
+                  In this Workshop, I conducted an Hands-on session on Image processing algorithm using MATLAB programming. 
                 </p>
               </div>
+            </a>
             </div>
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
-              data-aos-delay="300"
+              data-aos-delay="400"
             >
+            <a href="https://gdsc.community.dev/events/details/developer-student-clubs-nitte-meenakshi-institute-of-technology-bengaluru-presents-tensorflow-hands-on-session-solution-challenge/">
               <div class="icon-box">
-                <h4 class="title"><a href="https://gdsc.community.dev/events/details/developer-student-clubs-nitte-meenakshi-institute-of-technology-bengaluru-presents-tensorflow-hands-on-session-solution-challenge/">Deep Learning Workshop- GDSC</a></h4>
+                <h4 class="title">Deep Learning Workshop- GDSC</h4>
                 <p class="description">
                  I Spoke for two days on Deep Learning with TensorFlow at Nitte Meenakshi Institute of Technology.(hands-on)
                 </p>
               </div>
+            </a>
             </div>
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
@@ -179,36 +181,43 @@
                 </p>
               </div>
             </div>
-
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
               data-aos-delay="400"
-            >
+            ><a href="https://www.meetup.com/tfugblr/events/291662146/">
               <div class="icon-box">
-                <div class="icon"><i class="fab fa-Flask"></i></div>
-                <h4 class="title"><a>Flask</a></h4>
-                <p class="description">
-                 With the help of JavaScript and Python knowledge, I can work on Backend Developement using Flask Web Development Framework. 
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-md-6 col-lg-3 d-flex align-items-stretch"
-              data-aos="zoom-in"
-              data-aos-delay="400"
-            >
-              <div class="icon-box">
-                <div class="icon"><i class="fab fa-git-alt"></i></div>
-                <h4 class="title"><a href="https://www.meetup.com/tfugblr/events/291662146/">Scalability of ML Applications</a></h4>
+                <h4 class="title">Scalability of ML Applications</h4>
                 <p class="description">
                   The event covered various topics, including distributed computing, parallel processing, model optimization, deployment architectures, and more.
                 </p>
               </div>
+            </a>
             </div>
-
-          </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+              <div class="icon-box">
+                <h4 class="title"><a>Build Audio Recognition using TensorFlow</a></h4>
+                <p class="description">
+                 Upcoming - 11th March 2023
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+              <div class="icon-box">
+                <h4 class="title"><a>Gentle Dive into Stable Diffusion</a></h4>
+                <p class="description">
+                 Upcoming - 25th March 2023
+                </p>
+              </div>
+            </div>
         </div>
       </section>
       <!-- End Services Section -->
