--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <div class="icon-box">
                 <h4 class="title">ChatGPT Architecture Breakdown</h4>
                 <p class="description">
-                  In this event I spoke on Reinforcement Learning with Human Feedback, InstructGPT, Transformers and PPO algorithm used to build ChatGPT. 
+                  In this event I spoke on RLHF, InstructGPT, Transformers and PPO algorithm used to build ChatGPT. 
                 </p>
               </div>
               </a>
@@ -200,9 +200,10 @@
               data-aos-delay="400"
             >
               <div class="icon-box">
-                <h4 class="title"><a>Build Audio Recognition using TensorFlow</a></h4>
+                <h4 class="title"><a>MediaPipe Tasks API Bootcamp</a></h4>
                 <p class="description">
-                 Upcoming - 11th March 2023
+                 Upcoming - 18th March 2023
+                 <a href="https://www.eventbrite.com/e/pie-ai-bangalore-mediapipe-tasks-api-bootcamp-tickets-577711048297" target="_blank">Register</a>
                 </p>
               </div>
             </div>
@@ -254,12 +255,12 @@
                   class="img-fluid"
                   alt=""/>
                 <div class="portfolio-links">
-                  <a href="https://github.com/lucifertrj/ImgCav" title="ImgCav" target="_blank"
+                  <a href="https://github.com/raghavyuva/ciphers_statement" title="Ciphers" target="_blank"
                     ><i class="fab fa-github"></i
                   ></a>
                 </div>
                 <div class="portfolio-info">
-                  <h4>ImgCav.ai</h4>
+                  <h4>AI Recruitment App</h4>
                 </div>
               </div>
             </div>
@@ -434,7 +435,7 @@
                 <div class="email">
                   <i class="icofont-envelope"></i>
                   <h4>Email:</h4>
-                  <p>admin@animevyuh.org <br/>jain.tarun7501@gmail.com</p>
+                  <p>jain.tarun7501@gmail.com</p>
                 </div>
 
                 <div class="phone">
@@ -484,6 +485,12 @@
                     class="linkedin"
                     target="_blank"
                     ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                  <a
+                    href="https://twitter.com/TRJ_0751"
+                    class="twitter"
+                    target="_blank"
+                    ><i class="fab fa-twitter"></i
                   ></a>
                   <a
                     href="https://medium.com/@jaintarun7"
