--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
                   <a href="https://whats.link/rafaelmartins92" target="_blank"
                     ><i class="icofont-web"></i
                   ></a>
-                  <h4>Website</h4>
-                  <p><a href="https://www.animevyuh.org">Anime Vyuh</a></p>
+                  <h4>Newsletter</h4>
+                  <p><a href="./newsletter.html">Subscribe to my Newsletter</a></p>
                 </div>
               </div>
             </div>
