change contact to work

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li><a href="#about">About Me</a></li>
             <li><a href="#events">Events</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#blogs">Work</a></li>
             <li><a href="#social">Connect</a></li>
             <li class="get-started">
               <a href="https://drive.google.com/drive/folders/19EyJtfC9z5ggOfIk9rRlFIlFEpwb8qil?usp=sharing" target="_blank">Resume</a>
@@ -412,11 +412,11 @@
       <!-- End Portfolio Section -->
 
       <!-- ======= Contact Us Section ======= -->
-      <section id="contact" class="contact">
+      <section id="blogs" class="contact">
         <div class="container">
           <div class="section-title" data-aos="fade-up">
-            <h2>Contact Me</h2>
-            <p>Feel free to reach out to me...</p>
+            <h2>Appreciate my Work</h2>
+            <p>Feel free to check this resources...</p>
           </div>
 
           <div class="row justify-content-center">
@@ -427,15 +427,17 @@
             >
               <div class="info">
                 <div class="address">
-                  <i class="icofont-google-map"></i>
-                  <h4>Location:</h4>
-                  <p>Bangalore, India</p>
+                 <i class="icofont-unique-idea"></i>
+                  <h4>EkSauEk:</h4>
+                  <p>Coming soon...</p>
                 </div>
 
                 <div class="email">
-                  <i class="icofont-envelope"></i>
-                  <h4>Email:</h4>
-                  <p>jain.tarun7501@gmail.com</p>
+                  <i class="icofont-edit"></i>
+                  <h4>Blogs:</h4>
+                  <p>Medium: <a href="https://medium.com/@jaintarun7" target="_blank"></a></p>
+                  <p>GeeksForGeeks: <a href="https://auth.geeksforgeeks.org/user/jaintarun/articles" target="_blank"></a></p>
+                  <p>Analytics Vidya: <a href="https://www.analyticsvidhya.com/blog/author/tarun4641039/" target="_blank"></a></p>
                 </div>
 
                 <div class="phone">
