--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
                 <div class="email">
                   <i class="icofont-edit"></i>
                   <h4>Blogs:</h4>
-                  <p>Medium: <a href="https://medium.com/@jaintarun7" target="_blank"></a></p>
-                  <p>GeeksForGeeks: <a href="https://auth.geeksforgeeks.org/user/jaintarun/articles" target="_blank"></a></p>
-                  <p>Analytics Vidya: <a href="https://www.analyticsvidhya.com/blog/author/tarun4641039/" target="_blank"></a></p>
+                  <span>Medium: <a href="https://medium.com/@jaintarun7" target="_blank">@jaintarun7</a></span>
+                  <span>GeeksForGeeks: <a href="https://auth.geeksforgeeks.org/user/jaintarun/articles" target="_blank">jaintarun</a></span>
+                  <span>Analytics Vidya: <a href="https://www.analyticsvidhya.com/blog/author/tarun4641039/" target="_blank">tarun4641039</a></span>
                 </div>
 
                 <div class="phone">
