mediapipe tasks bootcamp

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <div class="icon-box">
                 <h4 class="title"><a>MediaPipe Tasks API Bootcamp</a></h4>
                 <p class="description">
-                 Upcoming - 18th March 2023
+                 In the Mediapipe Bootcamp, I explained the need of Mediapipe and its applications. And later the participants implemented Mediapipe Tasks projects in Audio, Image and Text domain. 
                  <a href="https://www.eventbrite.com/e/pie-ai-bangalore-mediapipe-tasks-api-bootcamp-tickets-577711048297" target="_blank">Register</a>
                 </p>
               </div>
@@ -215,7 +215,7 @@
               <div class="icon-box">
                 <h4 class="title"><a>Gentle Dive into Stable Diffusion</a></h4>
                 <p class="description">
-                 Upcoming - 25th March 2023
+                 Upcoming - 15th April 2023
                 </p>
               </div>
             </div>
