--- a/index.html
+++ b/index.html
@@ -198,14 +198,15 @@
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
               data-aos-delay="400"
-            >
+            ><a href="https://www.eventbrite.com/e/pie-ai-bangalore-mediapipe-tasks-api-bootcamp-tickets-577711048297" target="_blank">
               <div class="icon-box">
                 <h4 class="title"><a>MediaPipe Tasks API Bootcamp</a></h4>
                 <p class="description">
                  In the Mediapipe Bootcamp, I explained the need of Mediapipe and its applications. And later the participants implemented Mediapipe Tasks projects in Audio, Image and Text domain. 
-                 <a href="https://www.eventbrite.com/e/pie-ai-bangalore-mediapipe-tasks-api-bootcamp-tickets-577711048297" target="_blank">Register</a>
+                
                 </p>
               </div>
+               </a>
             </div>
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
